# Warframe-Market-Set-Profit-Analyzer

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  config.py  contributing.md  database.py  docker-compose.yml  frontend_log.txt  github-file-structure.md  gitignore.txt  main.py  market_analyzer.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run-analyzer.bat  run.bat  run.sh  sample-output.md  wf-market-analyzer.py  wf_market_analyzer.py
.Jules/: palette.md
.github/workflows/: ci.yml
.jules/: sentinel.md
backend/: Dockerfile  pytest.ini  requirements-test.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: analysis.py  export.py  history.py  sets.py  stats.py
backend/app/core/: __init__.py  cache_manager.py  logging.py  normalization.py  profit_calculator.py  rate_limiter.py  roi.py  scoring.py  statistics.py  strategy_profiles.py
backend/app/db/: database.py
backend/app/middleware/: __init__.py  security.py
backend/app/models/: schemas.py  warframe_market.py
backend/app/services/: analysis_service.py  warframe_market.py
backend/cache/: prime_sets_cache.json
backend/tests/: conftest.py
backend/tests/api/: test_analysis_routes.py  test_export_routes.py  test_history_routes.py  test_sets_routes.py  test_stats_routes.py
backend/tests/integration/: __init__.py  test_database.py
backend/tests/unit/: test_normalization.py  test_profit_calculator.py  test_rate_limiter.py  test_scoring.py  test_statistics.py  test_strategy_profiles.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/api/: analysis.ts  client.ts  types.ts
frontend/src/components/analysis/: ProfitTable.tsx  ScoreBreakdown.tsx  StrategySelector.tsx  WeightConfig.tsx
frontend/src/components/charts/: ProfitChart.tsx
frontend/src/components/common/: Button.tsx  Card.tsx  Loading.tsx  SpotlightCard.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/hooks/: useAnalysisProgress.ts
frontend/src/pages/: Analysis.tsx  Dashboard.tsx  Export.tsx  History.tsx
frontend/src/store/: analysisStore.ts
frontend/tests/e2e/fixtures/: test-data.ts
frontend/tests/e2e/flows/: full-analysis.spec.ts  strategy-change.spec.ts
frontend/tests/e2e/pages/: analysis.spec.ts  dashboard.spec.ts  export.spec.ts  history.spec.ts
frontend/tests/e2e/utils/: sse-helpers.ts  storage-helpers.ts
platinum_strategy_ui/: pubspec.yaml
platinum_strategy_ui/assets/: prices.json
platinum_strategy_ui/lib/: main.dart
platinum_strategy_ui/lib/models/: price_point.dart
platinum_strategy_ui/lib/services/: data_service.dart
platinum_strategy_ui/lib/utils/: analysis.dart
platinum_strategy_ui/test/: analysis_test.dart  widget_test.dart
scripts/: export_openapi_schema.py  generate-api-types.mjs
tests/: test_analyzer.py  test_api_parsing.py  test_cli.py  test_csv_output.py  test_scoring.py
