[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warframe-market-set-profit-analyzer"
version = "0.1.0"
description = "Analyze Warframe.market item sets for profit with robust scoring and Streamlit UI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  { name = "Engusseus" }
]
dependencies = [
  "aiohttp>=3.8.0",
  "pandas>=1.3.0",
  "numpy>=1.20.0",
  "tqdm>=4.61.0",
  "matplotlib>=3.0.0",
  "openpyxl>=3.0.0",
  "requests>=2.25.0",
  "streamlit>=1.30.0",
  "plotly>=5.0.0",
  "scikit-learn>=1.0.0",
  "streamlit-lottie>=0.0.5",
]

[project.scripts]
wf-market-analyzer = "wf_market_analyzer:cli_entry"


