[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warframe-market-set-profit-analyzer"
dynamic = ["version"]
description = "CLI analyzer for ranking profitable Warframe Prime sets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["warframe", "cli", "analysis", "csv"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
  "Topic :: Utilities",
]
dependencies = ["httpx>=0.27,<1.0"]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.8,<1",
]

[project.scripts]
wf-market-analyzer = "wf_market_analyzer:main"

[tool.setuptools]
py-modules = ["config", "wf_market_analyzer"]

[tool.setuptools.dynamic]
version = { attr = "config.APP_VERSION" }

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["wf_market_analyzer.py", "config.py"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
